# COMP36212_S24

./: CMakeLists.txt
src/week2/: mixed_precision_example0.c  mixed_precision_example1.c  modified_mixed_precision_example0.c
